<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representations">Find My Representations</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="representative_search">Representative Search></string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="use_my_location">Use My Location</string>
    <string name="my_representatives">My Representatives</string>
    <string name="empty_data">empty data !</string>
    <string name="election_information">Election Infomation</string>
    <string name="voting_locations">Voting Locations: {url}</string>
    <string name="ballot_information">Ballot Information: {url}</string>
    <string name="error_election">Unable to retrieve upcoming election</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="allow_location_to_fetch_your_address">Your location information is necessary to retrieve your current address.</string>
    <string name="enable_location_services_to_use_this_feature">Location access is required to utilize this functionality.</string>
    <string name="grant_location_permission_to_enable_this_feature">Location access is required to enable this functionality.</string>
    <string name="setting">Settings</string>



    <!-- TODO: Add necessary string values -->

</resources>

