<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- TODO: Add data binding node -->
    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>
    <!-- TODO: Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/representative_motion_scene"
        app:showPaths="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_representative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            app:layout_constraintEnd_toStartOf="parent">

            <TextView
                android:id="@+id/txt_search_title"
                style="@style/title_text_view_header_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_20"
                android:text="@string/representative_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txt_address_line_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_line_1"
                android:inputType="textPostalAddress"
                android:text="@={viewModel.addressLine1}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_search_title"
                tools:text="@string/address_line_1" />

            <EditText
                android:id="@+id/txt_address_line_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/address_line_2"
                android:inputType="textPostalAddress"
                android:text="@={viewModel.addressLine2}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_address_line_1"
                tools:text="@string/address_line_2" />

            <EditText
                android:id="@+id/txt_city"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/city"
                android:inputType="textPostalAddress"
                android:text="@={viewModel.city}"
                app:layout_constraintEnd_toStartOf="@id/spinner_state"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_address_line_2" />

            <Spinner
                android:id="@+id/spinner_state"
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_0"
                android:autofillHints=""
                app:stateValue="@{viewModel.state}"
                android:entries="@array/states"
                android:inputType="textPostalAddress"
                app:layout_constraintBottom_toBottomOf="@id/txt_city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txt_city"
                app:layout_constraintTop_toTopOf="@id/txt_city" />

            <EditText
                android:id="@+id/edt_zip"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/zip"
                android:inputType="number"
                android:maxLength="5"
                android:text="@={viewModel.zip}"
                app:layout_constraintEnd_toEndOf="@id/txt_city"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_city" />

            <Button
                android:id="@+id/btn_search"
                style="@style/button_design"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/colorPrimaryDark"
                android:text="@string/find_my_representatives"
                app:layout_constraintTop_toBottomOf="@id/edt_zip" />

            <Button
                android:id="@+id/btn_location"
                style="@style/button_design"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/colorPrimaryDark"
                android:text="@string/use_my_location"
                app:layout_constraintTop_toBottomOf="@id/btn_search"
                motion:layout_editor_absoluteX="@dimen/dp_0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/representative_list_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_representative">

            <TextView
                android:id="@+id/txt_label_representative_title"
                style="@style/title_text_view_header_style"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:text="@string/my_representatives"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progress_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:isVisible="@{viewModel.isLoading().booleanValue()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_representations"
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_0"
                android:layout_marginTop="@dimen/dp_20"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_label_representative_title" />

            <TextView
                android:id="@+id/txt_label_empty_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/empty_data"
                android:textAlignment="center"
                app:isVisible="@{viewModel.representatives.empty}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>