<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp_10"
        tools:context="com.example.android.politicalpreparedness.screen.MainActivity">

        <TextView
            android:id="@+id/txt_election_name"
            style="@style/title_text_view_header_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewModel.election.name}"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Election Name" />

        <TextView
            android:id="@+id/txt_election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            app:date="@{viewModel.election.electionDay}"
            app:layout_constraintTop_toBottomOf="@id/txt_election_name"
            tools:text="12 November 2055" />

        <TextView
            android:id="@+id/txt_label_header"
            style="@style/title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/election_information"
            app:layout_constraintStart_toStartOf="@id/txt_election_date"
            app:layout_constraintTop_toBottomOf="@id/txt_election_date" />

        <TextView
            android:id="@+id/txt_voting_locations"
            style="@style/common_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.openURL(viewModel.voterData.votingLocationFinderUrl)}"
            app:contentVisibility="@{viewModel.voterData.votingLocationFinderUrl}"
            android:text="@string/voting_locations"
            app:layout_constraintStart_toStartOf="@id/txt_election_date"
            app:layout_constraintTop_toBottomOf="@id/txt_label_header" />

        <TextView
            android:id="@+id/txt_ballot_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:onClick="@{() -> viewModel.openURL(viewModel.voterData.ballotInfoUrl)}"
            app:contentVisibility="@{viewModel.voterData.ballotInfoUrl}"
            android:text="@string/ballot_information"
            app:layout_constraintStart_toStartOf="@id/txt_election_date"
            app:layout_constraintTop_toBottomOf="@id/txt_voting_locations" />

        <TextView
            android:id="@+id/txt_state_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@{viewModel.voterData.name}"
            app:layout_constraintStart_toStartOf="@id/txt_election_date"
            app:layout_constraintTop_toBottomOf="@id/txt_ballot_information"
            tools:text="VoteInfo Name" />

        <TextView
            android:id="@+id/txt_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@{viewModel.voterData.correspondenceAddress}"
            app:drawableLeftCompat="@drawable/baseline_location_on_24"
            app:layout_constraintStart_toStartOf="@id/txt_election_date"
            app:layout_constraintTop_toBottomOf="@id/txt_state_header"
            app:contentVisibility="@{viewModel.voterData.correspondenceAddress}"
            tools:text="Correspondence Address" />

        <Button
            android:id="@+id/btn_toggle"
            style="@style/button_design"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.toggleElection(viewModel.election)}"
            app:isFollowing="@{viewModel.isFollow}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>